Recreate/deployment.yaml
## Essa solução não foi implantada com sucesso até o momento.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-versao
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api-versao
  strategy:
    type: Recreate #Recriação de pods após exclusão dos existentes
  template:
    metadata:
        annotation:
          prometheus.io/scrape: "true"
          prometheus.io/port: "8080"
        labels:
          app: api-versao
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v1
        resources: {}
        ports:
        - containerPort: 8080
